<resources>
    <string name="app_name">MobiWeekend</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search custom</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="search_custom">Custom photos</string>
    <string name="chose_location">Choose location</string>
    <string name="start">Start</string>
    <string name="location">Location</string>
    <string name="open_flickr_page">Flickr page</string>
    <string name="flickrId">Enter your Flickr ID</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="nature">Nature</string>
    <string name="city">City</string>
    <string name="custom">Custom</string>
    <string name="my">My photos</string>


    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>



</resources>
