<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_flickr_page"
          android:title="@string/open_flickr_page"
          android:icon="@drawable/menu_ic_flickr"
          android:showAsAction="ifRoom"
          tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/menu_item_map"
        android:title="@string/map"
        android:icon="@drawable/map"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share"
        android:icon="@drawable/share"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"/>


</menu>