<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/start_linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/startpage">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/mobiweekend"
        android:id="@+id/fragment_start_imageButton"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        </ImageButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linearlayout_bg"
        android:padding="5dp"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/fragment_start_imageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp">

        <Button
            android:id="@+id/fragment_start_choseLocationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_location"
            style="@style/ButtonText"
            android:text="@string/chose_location"/>

        <Button
            android:id="@+id/fragment_start_flickIdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_id"
            style="@style/ButtonText"
            android:text="@string/flickrId"/>

        <Button
            android:id="@+id/fragment_start_startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_start"
            style="@style/ButtonText"
            android:text="@string/start"/>

        </LinearLayout>




</RelativeLayout>